--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,13 +1,4 @@
 <div class="row">
-  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
-    <div class="text-center card mb-2 bg-dark">
-      <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="card-img-top" />
-
-      <div class="card-body text-white">
-        <div class="card-text">
-          {{ gif.title }}
-        </div>
-      </div>
-    </div>
-  </div>
+  <gifs-card *ngFor="let gif of gifs" [gif]="gif" class="col-md-3 col-sm-6">
+  </gifs-card>
 </div>
